# rust-plasma

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
plasma-store/: Cargo.toml  README.md  build.rs
plasma-store/src/: errors.rs  lib.rs  tests.rs
plasma-store/src/ffi/: ffi.cc  ffi.h  mod.rs  tests.rs
plasma-stream/: Cargo.toml  README.md
plasma-stream/src/: errors.rs  lib.rs  request.rs  utils.rs
plasma-stream/src/client/: cli.rs  mod.rs
plasma-stream/src/server/: dispatcher.rs  handler.rs  listener.rs  mod.rs  receiver.rs  sender.rs  store.rs
