[package]
name = "plasma-store"
version = "0.1.0"
authors = ["François Garillot <fga@fb.com>", "Irakliy Khaburzaniya <irakliyk@fb.com>"]
description = "Rust bindings for Arrow Plasma object store"
keywords = [ "arrow", "plasma" ]
categories = [ "no-std",  "api-bindings" ]
repository = "https://github.com/novifinancial/rust-plasma"
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
bench = false

[dependencies]
cxx = "1.0"
libc = "0.2"
rand = "0.8"
thiserror = "1.0"

[build-dependencies]
cc = "1.0"
cxx-build = "1.0"
