[package]
name = "plasma-stream"
version = "0.1.0"
authors = ["Irakliy Khaburzaniya <irakliyk@fb.com>"]
description = "High-performance transport of datasets between Arrow Plasma stores"
keywords = [ "arrow", "plasma", "stream" ]
repository = "https://github.com/novifinancial/rust-plasma"
license = "MIT"
edition = "2018"

[lib]
bench = false

[[bin]]
name = "plasma-stream-cli"
path = "src/client/cli.rs"
bench = false

[[bin]]
name = "plasma-stream-server"
path = "src/server/mod.rs"
bench = false

[dependencies]
bytes = "1.0"
hex = "0.4"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.1", features = ["full"] }
tracing = "0.1"
tracing-futures = { version = "0.2" }
tracing-subscriber = "0.2"
plasma-store = { path = "../plasma-store" }